src/test/deca/syntax/invalid/resultats/test22_while-synt.res
./src/test/deca/syntax/invalid/test22_while.deca:17:2: missing '{' at 'i'
